# django-admin-keyboard-shortcuts

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  package-lock.json  package.json  pyproject.toml  requirements.txt  runtests.py
.github/workflows/: ci.yml
django_admin_keyboard_shortcuts/: apps.py  sites.py  urls.py  views.py
django_admin_keyboard_shortcuts/static/admin/css/: admin-doc.css  shortcuts.css  shortcuts_select.css
django_admin_keyboard_shortcuts/static/admin/js/: instance_search.js  shortcuts.js  shortcuts_changeform.js  shortcuts_changelist.js  shortcuts_delete_confirmation.js  shortcuts_delete_selected_confirmation.js
django_admin_keyboard_shortcuts/templates/admin/: base.html  change_form.html  change_list.html  delete_confirmation.html  delete_selected_confirmation.html  login.html
django_admin_keyboard_shortcuts/templates/admin/partials/: instance_list_dialog.html  model_list_dialog.html  shortcuts_dialog.html
django_admin_keyboard_shortcuts/templates/admin_doc/: index.html
django_admin_keyboard_shortcuts/templates/registration/: logged_out.html
django_admin_keyboard_shortcuts/templatetags/: shortcuts.py
django_admin_keyboard_shortcuts/views/: autocomplete.py  instance_search.py
tests/: admin.py  models.py  settings.py  test_instance_search_view.py  tests.py  urls.py
